--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
             </div>
             <div class="pro-card">
                 <div class="pro-img">
+                    <img src="img/13.jpg" alt="img">
+                </div>
+                <div class="pro-info">
+                    <p class="pro-cat">Ui & Ux And Frontend Development</p>
+                    <strong class="pro-title">
+                        <span>coffee</span>
+                        <a href="https://beshoy-englizy.github.io/coffee/"target="_blank"class="more-d">More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="pro-card">
+                <div class="pro-img">
                     <img src="img/6.jpg" alt="img">
                 </div>
                 <div class="pro-info">
