--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
             </div>
             <div class="pro-card">
                 <div class="pro-img">
-                    <img src="img/12.jpg" alt="img">
+                    <img src="img/14.jpg" alt="img">
                 </div>
                 <div class="pro-info">
                     <p class="pro-cat">Ui & Ux And Frontend Development</p>
                     <strong class="pro-title">
                         <span>Portfolio-2</span>
-                        <a href="https://beshoy-englizy.github.io/error/"target="_blank"class="more-d">More Details</a>
+                        <a href="https://beshoy-englizy.github.io/Portfolio-2/"target="_blank"class="more-d">More Details</a>
                     </strong>
                 </div>
             </div>
