--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav>
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
+            <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -200,6 +201,38 @@
                         <span>al-tabi3a</span>
                         <a href="https://beshoy-englizy.github.io/al-tabi3a/"target="_blank"class="more-d">More Details</a>
                     </strong>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="s-cards" id="skills">
+        <h2 class="title">Skills</h2>
+        <div class="s-content">
+            <div class="card">
+                <div class="lan">
+                    <div class="icon">
+                        <i class="fa-solid fa-language"></i>
+                        <span>Language</span>
+                    </div>
+                    <div class="l-box">
+                        <div class="lan-box">Arabic</div>
+                        <div class="lan-box">English</div>
+                        <div class="lan-box">German</div>
+                    </div>
+                </div>
+                <div class="lan">
+                    <div class="icon">
+                        <i class="fas fa-code"></i>
+                        <span>Tools</span>
+                    </div>
+                    <div class="l-box">
+                        <div class="lan-box">HTML</div>
+                        <div class="lan-box">CSS</div>
+                        <div class="lan-box">JavaScript</div>
+                        <div class="lan-box">Saas</div>
+                        <div class="lan-box">Bootstrap</div>
+                        <div class="lan-box">Python</div>
+                    </div>
                 </div>
             </div>
         </div>
